--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,10 @@
 name = "ReadMatlabDocstrings"
 uuid = "5ac41729-0616-47d0-b24e-40b588cdc0a8"
 authors = ["okatsn <okatsn@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.0.0"
 
 [compat]
-julia = "1.9"
+julia = "1.10"
 
 [extras]
 CompatHelperLocal = "5224ae11-6099-4aaa-941d-3aab004bd678"
