--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,10 @@
 name = "ReadMatlabDocstrings"
 uuid = "5ac41729-0616-47d0-b24e-40b588cdc0a8"
 authors = ["okatsn <okatsn@gmail.com> and contributors"]
-version = "0.0.0"
+version = "0.0.1"
+
+[deps]
+Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 
 [compat]
 julia = "1.10"
